2006-03-25  Per Bothner  <per@bothner.com>

	* SlotGet.java (slotRef): New field.

2006-03-24  Per Bothner  <per@bothner.com>

	* SlotGet.java (makeGetField): Change return type.

2006-03-17  Per Bothner  <per@bothner.com>

	* OccurrenceType.java (getInstance): New factory method.

2006-03-15  Per Bothner  <per@bothner.com>

	* InstanceOf.java (language): Make protected, for use by new CastableAs.

	* Invoke.java (inlineClassName): Don't lower a PairClassType to its
	implementationType - that's only correct for 'make' - which does not
	use this method.

2006-03-13  Per Bothner  <per@bothner.com>

	* OccurrenceType.java (compare): Instead of a throw return -2.

	* SlotGet.java (apply): Fix WrongType exception value thrown.

2006-03-03  Per Bothner  <per@bothner.com>

	* Invoke.java (inlineClassName): Make return type more specific.

2006-02-19  Per Bothner  <per@bothner.com>

	* ClassMethods.java (getMethods): Combine two methods into one,
	and simplify parameter list to take a 'mode'.
	Pass mode to PrimProcedure constructor.
	(apply - both variants): Simplify parameter list.
	* Invoke.java (invoke): New can also match static methods.
	(apply(Objct[],CallContext)): Merge into caller.
	Handle more kinds.
	(applyN(Invoke,Object[])): Merge into caller.  Likewise handle more.
	(lookupMethods): New method.
	(apply, applyN): Use it.
	(getMethods): Handle more kinds.

	* SlotGet.java (getField): Return Member, and rename to lookupMember.
	(compile, getReturnType): Update accordingly.
	* SlotSet.java (lookupFieldOrMethod): Rename to lookupMember,
	and change return type to Member.
	(compile): Update accordingly. Can now simplify a bit.
	* Invoke.java (checkKeywords): Update appropriately.

2006-02-09  Per Bothner  <per@bothner.com>

	* Invoke.java (inline): Don't inline, unless mustCompile.
	* SlotGet.java (inline): Likewise.
	* SlotSet.java (inline): Likewise.

	* ArrayGet.java (apply2): Added missing coercion.

2006-02-07  Per Bothner  <per@bothner.com>
